--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>navbar project</h1>
+    <nav>
+        <div class="nav-center">
+            <div class="nav-header">
+                <img src="./logo.svg" alt="logo" class="logo" >
+            </div>
+        </div>
+    </nav>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
