--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
   </head>
   <body>
     <nav>
-        <div class="nav-center">
-            <div class="nav-header">
-                <img src="./logo.svg" alt="logo" class="logo" >
-            </div>
+      <div class="nav-center">
+        <div class="nav-header">
+          <img src="./logo.svg" alt="logo" class="logo" />
+          <button class="nav-toggle">
+            <i class="fas fa-bars"> </i>
+          </button>
         </div>
+      </div>
     </nav>
     <!-- javascript -->
     <script src="app.js"></script>
