--- a/index.html
+++ b/index.html
@@ -39,13 +39,9 @@
         </ul>
         <!-- social media -->
         <ul class="social-icons">
+          
           <li>
-            <a href="https://www.twitter.com">
-              <i class="fab fa-facebook"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.twitter.com">
+            <a href="https://twitter.com/Shubham22316">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
