--- a/index.html
+++ b/index.html
@@ -39,24 +39,23 @@
         </ul>
         <!-- social media -->
         <ul class="social-icons">
-          
           <li>
-            <a href="https://twitter.com/Shubham22316">
+            <a target="_blank" href="https://twitter.com/Shubham22316">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.twitter.com">
+            <a target="_blank" href="https://www.twitter.com">
               <i class="fab fa-behance"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.twitter.com">
+            <a target="_blank" href="https://www.linkedin.com/in/shubham-singh-23997021a/">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.twitter.com">
+            <a target="_blank" href="https://www.twitter.com">
               <i class="fab fa-sketch"></i>
             </a>
           </li>
